--- a/src/components/hodiny.scss
+++ b/src/components/hodiny.scss
@@ -67,3 +67,11 @@ transform: translateY(0.1rem);
   font-size: 1.6rem;
   font-weight: bold;
 }
+
+#text-otvorene{
+  color: rgb(21, 226, 21);
+}
+
+#text-zatvorene{
+  color: rgb(197, 16, 16);
+}
