--- a/src/components/hodiny.scss
+++ b/src/components/hodiny.scss
@@ -65,7 +65,7 @@ transform: translateY(0.1rem);
   align-items: center;
   padding-right: 1rem;
   font-size: 1.6rem;
-  font-weight: bold;
+  font-weight: 600;
 
 &__text{
   padding-left: 0.8rem;
