--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -154,8 +154,8 @@ $secondary-color: rgb(255, 183, 0);
 }
 
 .box{
-  width: 25rem;
-  height: 20rem;
+  width: 250px;
+  height: 200px;
   background-color: black;
   
   
