--- a/src/components/alert.scss
+++ b/src/components/alert.scss
@@ -1,9 +1,11 @@
 $primary-color: rgb(250, 105, 50);
 $secondary-color: rgb(255, 183, 0);
 
-.overlay-alert {
+.alert{
+  color: rgb(250, 105, 50);
+  text-align: center;
   position: fixed;
-  top: 0rem;
+  top: 5rem;
   right: 0;
   bottom: 0;
   left: 0;
@@ -12,35 +14,8 @@ $secondary-color: rgb(255, 183, 0);
   justify-content: center;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 145;
-}
-
-.alert {
-  z-index: 150;
-  position: relative;
-  width: 100%;
-  max-width: 50rem;
-  overflow: auto;
-  
-}
-
-.alert-close {
-  position: absolute;
-  top: 0.8rem;
-  right: 0.8rem;
-  padding: 5px;
-  border: 0;
-  -webkit-appearance: none;
-  background: none;
-  color: black;
-  cursor: pointer;
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-
-.alert-body {
-  padding: 3rem;
-  background-color: rgb(255, 255, 255);
-  font-size: 1.8rem;
+  font-size: 3rem;
+  font-weight: 500;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 100;
 }
