--- a/src/components/objednavka_layout.scss
+++ b/src/components/objednavka_layout.scss
@@ -1,3 +1,6 @@
+$primary-color: rgb(250, 105, 50);
+$secondary-color: rgb(255, 183, 0);
+
 .header {
   position: relative;
   height: 100%;
@@ -116,5 +119,4 @@
   text-align: left;
   align-self: flex-start;
   padding: 1rem;
-  //min-height: 55rem;
 }
